# kitty-tabs

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
include/: kitty.hpp  parser.hpp  pipe.hpp  process.hpp  types.hpp
src/: kitty.c  kitty.cpp  kitty.h  main.c  main.cpp  parser.c  parser.cpp  parser.h  pipe.cpp  process.c  process.cpp  process.h  types.h
